# serializer version: 1
# name: test_forecast_subscription[daily]
  list([
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 45.9,
      'templow': 26.1,
      'wind_bearing': 239.6,
      'wind_speed': 34.16,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-08T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 49.4,
      'templow': 26.3,
      'wind_bearing': 262.82,
      'wind_speed': 26.06,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-09T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 67.0,
      'templow': 31.5,
      'wind_bearing': 229.3,
      'wind_speed': 25.38,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-10T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 65.3,
      'templow': 37.3,
      'wind_bearing': 149.91,
      'wind_speed': 38.3,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-11T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 66.2,
      'templow': 48.3,
      'wind_bearing': 210.45,
      'wind_speed': 56.48,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-03-12T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 67.9,
      'templow': 53.8,
      'wind_bearing': 217.98,
      'wind_speed': 44.28,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-13T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 54.5,
      'templow': 42.9,
      'wind_bearing': 58.79,
      'wind_speed': 34.99,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-03-14T10:00:00+00:00',
      'precipitation': 0.94,
      'precipitation_probability': 95,
      'temperature': 42.9,
      'templow': 33.4,
      'wind_bearing': 70.25,
      'wind_speed': 58.5,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-03-15T10:00:00+00:00',
      'precipitation': 0.06,
      'precipitation_probability': 55,
      'temperature': 43.7,
      'templow': 29.4,
      'wind_bearing': 84.47,
      'wind_speed': 57.2,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-16T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 43.0,
      'templow': 29.1,
      'wind_bearing': 103.85,
      'wind_speed': 24.16,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-17T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 52.4,
      'templow': 34.3,
      'wind_bearing': 145.41,
      'wind_speed': 26.17,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-18T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 54.1,
      'templow': 41.3,
      'wind_bearing': 62.99,
      'wind_speed': 23.69,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-03-19T10:00:00+00:00',
      'precipitation': 0.12,
      'precipitation_probability': 55,
      'temperature': 48.9,
      'templow': 39.4,
      'wind_bearing': 68.54,
      'wind_speed': 50.08,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-03-20T10:00:00+00:00',
      'precipitation': 0.05,
      'precipitation_probability': 33.3,
      'temperature': 40.1,
      'templow': 35.1,
      'wind_bearing': 56.98,
      'wind_speed': 62.46,
    }),
  ])
# ---
# name: test_forecast_subscription[daily].1
  list([
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 45.9,
      'templow': 26.1,
      'wind_bearing': 239.6,
      'wind_speed': 34.16,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-08T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 49.4,
      'templow': 26.3,
      'wind_bearing': 262.82,
      'wind_speed': 26.06,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-09T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 67.0,
      'templow': 31.5,
      'wind_bearing': 229.3,
      'wind_speed': 25.38,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-10T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 65.3,
      'templow': 37.3,
      'wind_bearing': 149.91,
      'wind_speed': 38.3,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-11T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 66.2,
      'templow': 48.3,
      'wind_bearing': 210.45,
      'wind_speed': 56.48,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-03-12T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 67.9,
      'templow': 53.8,
      'wind_bearing': 217.98,
      'wind_speed': 44.28,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-13T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 54.5,
      'templow': 42.9,
      'wind_bearing': 58.79,
      'wind_speed': 34.99,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-03-14T10:00:00+00:00',
      'precipitation': 0.94,
      'precipitation_probability': 95,
      'temperature': 42.9,
      'templow': 33.4,
      'wind_bearing': 70.25,
      'wind_speed': 58.5,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-03-15T10:00:00+00:00',
      'precipitation': 0.06,
      'precipitation_probability': 55,
      'temperature': 43.7,
      'templow': 29.4,
      'wind_bearing': 84.47,
      'wind_speed': 57.2,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-16T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 43.0,
      'templow': 29.1,
      'wind_bearing': 103.85,
      'wind_speed': 24.16,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-17T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 52.4,
      'templow': 34.3,
      'wind_bearing': 145.41,
      'wind_speed': 26.17,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-18T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 54.1,
      'templow': 41.3,
      'wind_bearing': 62.99,
      'wind_speed': 23.69,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2021-03-19T10:00:00+00:00',
      'precipitation': 0.12,
      'precipitation_probability': 55,
      'temperature': 48.9,
      'templow': 39.4,
      'wind_bearing': 68.54,
      'wind_speed': 50.08,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2021-03-20T10:00:00+00:00',
      'precipitation': 0.05,
      'precipitation_probability': 33.3,
      'temperature': 40.1,
      'templow': 35.1,
      'wind_bearing': 56.98,
      'wind_speed': 62.46,
    }),
  ])
# ---
# name: test_forecast_subscription[hourly]
  list([
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T17:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 44.1,
      'wind_bearing': 315.14,
      'wind_speed': 33.59,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T18:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 44.8,
      'wind_bearing': 321.71,
      'wind_speed': 31.82,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T19:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 45.8,
      'wind_bearing': 323.38,
      'wind_speed': 32.04,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T20:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 45.3,
      'wind_bearing': 318.43,
      'wind_speed': 33.73,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T21:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 44.6,
      'wind_bearing': 320.9,
      'wind_speed': 28.98,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T22:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 41.9,
      'wind_bearing': 322.11,
      'wind_speed': 15.7,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T23:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 38.9,
      'wind_bearing': 295.94,
      'wind_speed': 17.78,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-08T00:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 36.2,
      'wind_bearing': 11.94,
      'wind_speed': 20.12,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-08T01:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 34.3,
      'wind_bearing': 13.68,
      'wind_speed': 20.05,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T02:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 32.9,
      'wind_bearing': 14.93,
      'wind_speed': 19.48,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T03:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 31.9,
      'wind_bearing': 26.07,
      'wind_speed': 16.6,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T04:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 29.2,
      'wind_bearing': 51.27,
      'wind_speed': 9.32,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T05:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 27.4,
      'wind_bearing': 343.25,
      'wind_speed': 11.92,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T06:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 26.7,
      'wind_bearing': 341.46,
      'wind_speed': 15.37,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T07:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 26.4,
      'wind_bearing': 322.34,
      'wind_speed': 12.71,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T08:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 26.1,
      'wind_bearing': 294.69,
      'wind_speed': 13.14,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T09:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 30.1,
      'wind_bearing': 325.32,
      'wind_speed': 11.52,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T10:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 31.0,
      'wind_bearing': 322.27,
      'wind_speed': 10.22,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T11:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 27.2,
      'wind_bearing': 310.14,
      'wind_speed': 20.12,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T12:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 29.2,
      'wind_bearing': 324.8,
      'wind_speed': 25.38,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-03-08T13:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 33.2,
      'wind_bearing': 335.16,
      'wind_speed': 23.26,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-08T14:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 37.0,
      'wind_bearing': 324.49,
      'wind_speed': 21.17,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-08T15:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 40.0,
      'wind_bearing': 310.68,
      'wind_speed': 19.98,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-03-08T16:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 42.4,
      'wind_bearing': 304.18,
      'wind_speed': 19.66,
    }),
  ])
# ---
# name: test_forecast_subscription[hourly].1
  list([
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T17:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 44.1,
      'wind_bearing': 315.14,
      'wind_speed': 33.59,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T18:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 44.8,
      'wind_bearing': 321.71,
      'wind_speed': 31.82,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T19:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 45.8,
      'wind_bearing': 323.38,
      'wind_speed': 32.04,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T20:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 45.3,
      'wind_bearing': 318.43,
      'wind_speed': 33.73,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T21:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 44.6,
      'wind_bearing': 320.9,
      'wind_speed': 28.98,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T22:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 41.9,
      'wind_bearing': 322.11,
      'wind_speed': 15.7,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-07T23:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 38.9,
      'wind_bearing': 295.94,
      'wind_speed': 17.78,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-08T00:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 36.2,
      'wind_bearing': 11.94,
      'wind_speed': 20.12,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2021-03-08T01:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 34.3,
      'wind_bearing': 13.68,
      'wind_speed': 20.05,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T02:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 32.9,
      'wind_bearing': 14.93,
      'wind_speed': 19.48,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T03:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 31.9,
      'wind_bearing': 26.07,
      'wind_speed': 16.6,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T04:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 29.2,
      'wind_bearing': 51.27,
      'wind_speed': 9.32,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T05:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 27.4,
      'wind_bearing': 343.25,
      'wind_speed': 11.92,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T06:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 26.7,
      'wind_bearing': 341.46,
      'wind_speed': 15.37,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T07:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 26.4,
      'wind_bearing': 322.34,
      'wind_speed': 12.71,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T08:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 26.1,
      'wind_bearing': 294.69,
      'wind_speed': 13.14,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T09:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 30.1,
      'wind_bearing': 325.32,
      'wind_speed': 11.52,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T10:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 31.0,
      'wind_bearing': 322.27,
      'wind_speed': 10.22,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T11:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 27.2,
      'wind_bearing': 310.14,
      'wind_speed': 20.12,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2021-03-08T12:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 29.2,
      'wind_bearing': 324.8,
      'wind_speed': 25.38,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-03-08T13:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 33.2,
      'wind_bearing': 335.16,
      'wind_speed': 23.26,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-08T14:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 37.0,
      'wind_bearing': 324.49,
      'wind_speed': 21.17,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2021-03-08T15:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 40.0,
      'wind_bearing': 310.68,
      'wind_speed': 19.98,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2021-03-08T16:48:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 0,
      'temperature': 42.4,
      'wind_bearing': 304.18,
      'wind_speed': 19.66,
    }),
  ])
# ---
# name: test_v4_forecast_service
  dict({
    'forecast': list([
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T11:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 45.9,
        'templow': 26.1,
        'wind_bearing': 239.6,
        'wind_speed': 34.16,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-08T11:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 49.4,
        'templow': 26.3,
        'wind_bearing': 262.82,
        'wind_speed': 26.06,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-09T11:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 67.0,
        'templow': 31.5,
        'wind_bearing': 229.3,
        'wind_speed': 25.38,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-10T11:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 65.3,
        'templow': 37.3,
        'wind_bearing': 149.91,
        'wind_speed': 38.3,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-11T11:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 66.2,
        'templow': 48.3,
        'wind_bearing': 210.45,
        'wind_speed': 56.48,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2021-03-12T11:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 25,
        'temperature': 67.9,
        'templow': 53.8,
        'wind_bearing': 217.98,
        'wind_speed': 44.28,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-13T11:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 25,
        'temperature': 54.5,
        'templow': 42.9,
        'wind_bearing': 58.79,
        'wind_speed': 34.99,
      }),
      dict({
        'condition': 'snowy',
        'datetime': '2021-03-14T10:00:00+00:00',
        'precipitation': 0.94,
        'precipitation_probability': 95,
        'temperature': 42.9,
        'templow': 33.4,
        'wind_bearing': 70.25,
        'wind_speed': 58.5,
      }),
      dict({
        'condition': 'snowy',
        'datetime': '2021-03-15T10:00:00+00:00',
        'precipitation': 0.06,
        'precipitation_probability': 55,
        'temperature': 43.7,
        'templow': 29.4,
        'wind_bearing': 84.47,
        'wind_speed': 57.2,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-16T10:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 43.0,
        'templow': 29.1,
        'wind_bearing': 103.85,
        'wind_speed': 24.16,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-17T10:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 52.4,
        'templow': 34.3,
        'wind_bearing': 145.41,
        'wind_speed': 26.17,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-18T10:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 10,
        'temperature': 54.1,
        'templow': 41.3,
        'wind_bearing': 62.99,
        'wind_speed': 23.69,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2021-03-19T10:00:00+00:00',
        'precipitation': 0.12,
        'precipitation_probability': 55,
        'temperature': 48.9,
        'templow': 39.4,
        'wind_bearing': 68.54,
        'wind_speed': 50.08,
      }),
      dict({
        'condition': 'snowy',
        'datetime': '2021-03-20T10:00:00+00:00',
        'precipitation': 0.05,
        'precipitation_probability': 33.3,
        'temperature': 40.1,
        'templow': 35.1,
        'wind_bearing': 56.98,
        'wind_speed': 62.46,
      }),
    ]),
  })
# ---
# name: test_v4_forecast_service.1
  dict({
    'forecast': list([
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T17:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 44.1,
        'wind_bearing': 315.14,
        'wind_speed': 33.59,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T18:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 44.8,
        'wind_bearing': 321.71,
        'wind_speed': 31.82,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T19:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 45.8,
        'wind_bearing': 323.38,
        'wind_speed': 32.04,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T20:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 45.3,
        'wind_bearing': 318.43,
        'wind_speed': 33.73,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T21:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 44.6,
        'wind_bearing': 320.9,
        'wind_speed': 28.98,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T22:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 41.9,
        'wind_bearing': 322.11,
        'wind_speed': 15.7,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-07T23:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 38.9,
        'wind_bearing': 295.94,
        'wind_speed': 17.78,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-08T00:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 36.2,
        'wind_bearing': 11.94,
        'wind_speed': 20.12,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2021-03-08T01:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 34.3,
        'wind_bearing': 13.68,
        'wind_speed': 20.05,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T02:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 32.9,
        'wind_bearing': 14.93,
        'wind_speed': 19.48,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T03:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 31.9,
        'wind_bearing': 26.07,
        'wind_speed': 16.6,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T04:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 29.2,
        'wind_bearing': 51.27,
        'wind_speed': 9.32,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T05:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 27.4,
        'wind_bearing': 343.25,
        'wind_speed': 11.92,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T06:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 26.7,
        'wind_bearing': 341.46,
        'wind_speed': 15.37,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T07:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 26.4,
        'wind_bearing': 322.34,
        'wind_speed': 12.71,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T08:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 26.1,
        'wind_bearing': 294.69,
        'wind_speed': 13.14,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T09:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 30.1,
        'wind_bearing': 325.32,
        'wind_speed': 11.52,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T10:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 31.0,
        'wind_bearing': 322.27,
        'wind_speed': 10.22,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T11:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 27.2,
        'wind_bearing': 310.14,
        'wind_speed': 20.12,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2021-03-08T12:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 29.2,
        'wind_bearing': 324.8,
        'wind_speed': 25.38,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2021-03-08T13:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 33.2,
        'wind_bearing': 335.16,
        'wind_speed': 23.26,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-08T14:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 37.0,
        'wind_bearing': 324.49,
        'wind_speed': 21.17,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2021-03-08T15:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 40.0,
        'wind_bearing': 310.68,
        'wind_speed': 19.98,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2021-03-08T16:48:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 0,
        'temperature': 42.4,
        'wind_bearing': 304.18,
        'wind_speed': 19.66,
      }),
    ]),
  })
# ---
